--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -47,7 +47,7 @@ body {
     line-height: var(--line-height-base);
 }
 
-a:any-link {
+a:link {
     color: var(--text-color);
     text-decoration: none;
 }
