--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -142,10 +142,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
     text-align: center;
+    list-style: none;
 }
 
 .nav .nav-item {
-    all: unset;
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
