--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -45,7 +45,7 @@ html {
     --section-footer-align: center;
     --footer-padding: 5rem 0 1rem;
 
-    --nav-item-font-family: var(--font-family-titl)e;
+    --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
     --nav-item-letter-spacing: 0.04rem;
