--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -303,7 +303,7 @@ ul.row {
     position: var(--header-logo-position);
 }
 
-.header-logo a {
+.header-logo > a {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
     vertical-align: var(--header-logo-link-top);
