--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -307,5 +307,5 @@ ul.row {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
     vertical-align: var(--header-logo-link-top);
-    text-align: var(--header-logo-link-left);
+    margin-left: var(--header-logo-link-left);
 }
