--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -306,7 +306,7 @@ ul.row {
 .card-work .card-image img {
     height: 30rem;
     width: 100%;
-    --object-fit: cover;
+    object-fit: cover;
     bottom: 0;
 }
 
