--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -292,7 +292,7 @@ ul.row {
     height: 10rem;
 }
 .card-testimonial .card-quote {
-    position: absolute;
+    position: relative;
 }
 
 .card-testimonial .card-quote::before {
