--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -113,7 +113,8 @@ a:active {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background: var(--button-hover-background);
-    transition: color var(--transition-duration), background-color var(--transition-duration);
+    transition-duration: var(--transition-duration);
+    transition-property: color, background-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
