--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -218,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav .nav-link::before {
-    transition: all var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 ul.row {
@@ -338,7 +338,7 @@ ul.row {
     left: -0.1rem;
     right: -0.1rem;
     z-index: 1;
-    transition: all var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
@@ -374,7 +374,7 @@ ul.row {
 
 .card-work:hover .card-image {
     transform: scale(1.2);
-    transition: all var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
