--- a/0x03-sass_scss/12-loop_header.scss
+++ b/0x03-sass_scss/12-loop_header.scss
@@ -1,10 +1,4 @@
-/*
-Write a Sass file that creates H* tags, where ‘*’ is the size of the font used.
-
-h1 must have font size equal to 1px, h2 must have font size equal to 2px, etc.
-You must create H* tags from 1 to 5
-You must use @for statement
-*/
+/* Write a Sass file that creates H* tags, where ‘*’ is the size of the font used. */
 @for $i from 1 through 5 {
     h#{$i} {
         font-size: #{$i}px;
